- ADDED: Ability to scroll to waypoint via hashtag on load. - ADDED: Expandable content. - ADDED: Airlines content updates. - FIXED: Header scroll-to position without overlap. - FIXED: Media section on mobile 2-up layout. - FIXED: Hover state on base colour buttons.

--- a/src/scss/global/_defaults.scss
+++ b/src/scss/global/_defaults.scss
@@ -24,6 +24,15 @@ html {
 	}
 
 
+/*
+ *	Defaults: Grid
+ *	--------------------------------------------------
+ */
+
+.-hide-desktop {
+	display: none;
+}
+
 
 /*
  *	Defaults: Anchors
@@ -205,6 +214,24 @@ img {
  */
 
 @include breakpoint(tablet-wide) {
+
+}
+
+
+/*
+ *	Breakpoint:	smartphone-wide
+ *	--------------------------------------------------
+ */
+
+@include breakpoint(smartphone-wide) {
+
+	.-hide-desktop {
+		display: inherit;
+	}
+	.-hide-mobile {
+		display: none;
+	}
+
 
 }
 
