--- a/src/scss/ui/_profile-image.scss
+++ b/src/scss/ui/_profile-image.scss
@@ -32,7 +32,7 @@
 	//	Styles	 ----------------
 	
 	&.-left {
-		margin-right: $GUTTER;
+		margin-right: $GUTTER/2;
 		float: left;
 	}
 
