--- a/src/scss/views/_landing.scss
+++ b/src/scss/views/_landing.scss
@@ -743,7 +743,7 @@ html.-is-ie {
 
 	section.media {
 		.brand-img {
-			max-width: 50%;
+			width: 50%; max-width: 50%;
 		}
 	}
 
